# polytool

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agy-parallel-limitation.md
docs/superpowers/specs/: 2026-07-20-ai-accounts-list-progress-design.md
src/polytool/: __init__.py  _present.py  _utils.py  ai_accounts.py  charcount.py  claude_accounts.py  claude_usage.py  codex_accounts.py  codex_usage.py  gemini_accounts.py  gemini_usage.py  grok_accounts.py  gtrans.py  html_to_md.py  imgmin.py  resize.py  towebp.py  usage_format.py  vcadd.py
tests/: test_ai_accounts.py  test_claude_accounts.py  test_codex_accounts.py  test_cross_platform.py  test_gemini_accounts.py  test_grok_accounts.py  test_present.py  test_usage_format.py
