[project]
name = "polytool"
version = "1.0.0"
description = "Personal CLI toolbox extracted from ~/.zshrc, packaged as uv tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "polytool" }]
license = { text = "MIT" }
dependencies = ["pypinyin"]

[project.scripts]
gtrans = "polytool.gtrans:main"
charcount = "polytool.charcount:main"
imgmin = "polytool.imgmin:main"
resize-image = "polytool.resize:main"
towebp = "polytool.towebp:main"
html2md = "polytool.html_to_md:main"
vcadd = "polytool.vcadd:main"
codex-accounts = "polytool.codex_accounts:main"
agy-accounts = "polytool.gemini_accounts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polytool"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
